Add generated bundle.js to gitignore and rename it (from app.js)

--- a/core/clients/6poc/web/index.html
+++ b/core/clients/6poc/web/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
     <!-- Include Google Maps JS API -->
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw&libraries=places"></script>
-    <script defer src="app.js"></script>
+    <script defer src="6poc-browserify-bundle.js"></script>
   </head>
   <body>
   </body>
