--- a/core/clients/2poc/index.html
+++ b/core/clients/2poc/index.html
@@ -148,7 +148,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         -->
-        <script defer src="Citizen-browserify-bundle.js"></script>
+        <script defer src="2poc-browserify-bundle.js"></script>
         
     </head>
 
